# python-physics

./: README.md  double_pendulum.py  pyproject.toml  sliding_pendulum.py
examples/: coupled_pendulums_problem.py  double_pendulum.py  sliding_pendulum.py
python_physics/vizualization/: simulation_framework.py
